2006-05-25  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Changed format.

2006-05-17  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.3.

	* config/x_ac_meta.m4: Changed META_ALIAS to not include release if 1.

	* HISTORY, META, NEWS: Updated for 0.5.3 release.

	* munge.spec: Ensured "libmunge-32_64.a" is removed at top of %build.

	* README.MULTILIB: Updated for AIX.

2006-05-16  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Moved %build keyword outside of os conditional.

	* munge.spec: Fixed %post, %preun, and %postun scripts to succeed
	  when the executable is not executable (as in the case for AIX).

	* munge.spec: Added support for AIX (32b, 64b, and 32_64 multiarch).

2006-05-15  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Replaced /etc with %{_sysconfdir}, and /var with
	  %{_localstatedir}.  Replaced "/sbin/service" with init script.

	* config/x_ac_arch.m4: Unset x_ac_cv_check_ssl_dir to allow a
	  multiarch reconfigure to succeed when the config cache is enabled.

2006-05-11  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Added PIDFILE and localstatedir.
	* src/etc/munge.sysconfig: Added PIDFILE.
	* src/libcommon/munge_defs.h: Added MUNGED_PIDFILE.
	* src/munged/conf.c, src/munged/conf.h, src/munged/munged.c:
	  Added support for pidfile_name.

	* config/x_ac_arch.m4: Added error message if OBJECT_MODE is not
	  exported to the shell for AIX.

2006-05-10  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_arch.m4: Exported OBJECT_MODE for AIX.

	* src/etc/munge.init.in: Changed query_pids ps format specifier
	  from "args" to "command" for OS X.  Replaced query_pids ps format
	  specifier for empty column headers (=) with "| tail +2" for OS X.

	* config/x_ac_arch.m4: Added support for AIX.

2006-05-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Created $(localstatedir)/log dir.

	* src/etc/munge.init.in: Renamed from src/etc/munge.init.
	  Added prefix, exec_prefix, sbindir, and sysconfdir.