@@ -1,3 +1,7 @@
+2006-06-05  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/munged.c(write_pidfile): Fixed double-free of file ptr.
+
 2006-05-25  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* NEWS: Changed format.
